--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,11 @@ $RECYCLE.BIN/
 # input images and heatmap outputs
 /images/
 /heatmaps/
+
+# Папки
+**/models/
+**/.ipynb_checkpoints/
+**/.vscode/
+
+# Файлы
+*.pt
