--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-diffusers
-huggingface-hub
-numpy
-pandas
+huggingface_hub==0.28.1
+ipython==8.12.3
+matplotlib==3.8.2
+numpy==1.24.1
+pandas==2.0.3
 pillow >= 9.5.0
+plotly==6.0.0
+Requests==2.32.3
+safetensors==0.5.3
+scikit_learn==1.3.0
 simple-parsing >= 0.1.5
 timm @ git+https://github.com/huggingface/pytorch-image-models@main#egg=timm
-tokenizers
 torch >= 2.0.0
-torchvision
-transformers
+ultralytics==8.3.85
+~orch==2.0.1+cu118
+~uggingface_hub==0.13.3
