Убрал изображения на hugginface + добавил вывод среднего количества тегов в analitycs

--- a/.gitignore
+++ b/.gitignore
@@ -255,9 +255,12 @@ $RECYCLE.BIN/
 **/models/
 **/.ipynb_checkpoints/
 **/.vscode/
+**/Tests/
+**/TestTagPic/
 
 # Файлы
 *.pt
 *.csv
 result.json
 results_merged.json
+
