--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 huggingface_hub==0.28.1
 ipython==8.12.3
 matplotlib==3.8.2
-numpy==1.24.1
+numpy==1.26.4
 pandas==2.0.3
 pillow >= 9.5.0
 plotly==6.0.0
@@ -9,8 +9,13 @@ Requests==2.32.3
 safetensors==0.5.3
 scikit_learn==1.3.0
 simple-parsing >= 0.1.5
-timm @ git+https://github.com/huggingface/pytorch-image-models@main#egg=timm
-torch >= 2.0.0
+timm #@ git+https://github.com/huggingface/pytorch-image-models@main#egg=timm
+pandas
+#~torch >= 2.0.0
 ultralytics==8.3.85
-~orch==2.0.1+cu118
-~uggingface_hub==0.13.3
+simple_parsing
+torch==2.6.0 
+torchvision==0.21.0 
+torchaudio==2.6.0
+#~huggingface_hub==0.13.3
+nbformat>=4.2.0
